Use Java 21 features
Signed-off-by: Federico Valeri <fedevaleri@gmail.com>